--- a/src/app/locales/en-US.json
+++ b/src/app/locales/en-US.json
@@ -40,6 +40,7 @@
         "resume": "RESUME"
     },
     "portfolio": {
+        "barber": "Barbershop management project, developed in ReactJS and NodeJS",
         "carwash4u": "Project Startup Carwash4U",
         "guilhermeSolutions": "Source code of this portfolio to know my way of coding.",
         "guilhermeVanessa": "My marriage",
