--- a/src/app/locales/pt-BR.json
+++ b/src/app/locales/pt-BR.json
@@ -40,7 +40,8 @@
         "resume": "RESUMO"
     },
     "portfolio": {
-        "carwash4u": "Projeto Startup Carwash4U",
+        "barber": "Projeto para gestão de barbearia, desenvolvido em ReactJS e NodeJS",
+        "carwash4u": "Projeto Startup Carwash4U. Projeto desenvolvido em AngularJS",
         "guilhermeSolutions": "Código fonte deste portfólio para conhecer minha forma de codar.",
         "guilhermeVanessa": "Meu casamento",
         "title": "portfólio"
