Add devradar in portfolio

--- a/src/app/locales/pt-BR.json
+++ b/src/app/locales/pt-BR.json
@@ -42,6 +42,7 @@
     "portfolio": {
         "barber": "Projeto para gestão de barbearia, desenvolvido em ReactJS, NodeJS e Expo",
         "carwash4u": "Projeto Startup Carwash4U. Projeto desenvolvido em AngularJS",
+        "devRadar": "Sistema de procura de desenvolvedores por tecnologia em tempo real",
         "guilhermeSolutions": "Código fonte deste portfólio para conhecer minha forma de codar.",
         "guilhermeVanessa": "Meu casamento",
         "title": "portfólio"
