--- a/src/app/locales/en-US.json
+++ b/src/app/locales/en-US.json
@@ -42,6 +42,7 @@
     "portfolio": {
         "barber": "Barbershop management project, developed in ReactJS, NodeJS and Expo",
         "carwash4u": "Project Startup Carwash4U",
+        "devRadar": "Real-time technology search engine for developers",
         "guilhermeSolutions": "Source code of this portfolio to know my way of coding.",
         "guilhermeVanessa": "My marriage",
         "title": "portfolio"
