--- a/src/app/locales/pt-BR.json
+++ b/src/app/locales/pt-BR.json
@@ -41,6 +41,7 @@
     },
     "portfolio": {
         "barber": "Projeto para gestão de barbearia, desenvolvido em ReactJS, NodeJS e Expo",
+        "beTheHero": "Aplicativo para busca de causas que necessitam de ajuda.",
         "carwash4u": "Projeto Startup Carwash4U. Projeto desenvolvido em AngularJS",
         "devRadar": "Sistema de procura de desenvolvedores por tecnologia em tempo real",
         "guilhermeSolutions": "Código fonte deste portfólio para conhecer minha forma de codar.",
