--- a/src/app/locales/en-US.json
+++ b/src/app/locales/en-US.json
@@ -28,17 +28,20 @@
         "social": "LET’S SOCIALIZE"
     },
     "CURRENT": "CURRENT",
+    "FEB": "FEB",
     "home": {
         "banners": ["am developer.", "am a technology lover.", "like new challenges.", "can love and hate JS at the same time;)"],
         "hello": "Hi, my name is ",
         "i": "I"
     },
+    "JAN": "JAN",
     "leftNavBar": {
         "aboutMe": "ABOUT ME",
         "contact": "CONTACT",
         "portfolio": "PORTFOLIO",
         "resume": "RESUME"
     },
+    "MAY": "MAY",
     "portfolio": {
         "barber": "Barbershop management project, developed in ReactJS, NodeJS and Expo",
         "beTheHero": "Application to search for causes that can help.",
@@ -46,7 +49,8 @@
         "devRadar": "Real-time technology search engine for developers",
         "guilhermeSolutions": "Source code of this portfolio to know my way of coding.",
         "guilhermeVanessa": "My marriage",
-        "title": "portfolio"
+        "title": "portfolio",
+        "twitter": "Project with some existing twitter features, developed using ReactJS and NodeJS"
     },
     "resume": {
         "attention": "ATTENTION",
@@ -57,7 +61,8 @@
         "message": "You recruiter / client who is visiting my site, first I am happy for your visit. I would like to say something about “Code Skills / Design Skills”… Don't give relevance to the values ​​and technologies presented, my experience forces me to say that relating skill percentage to a technology does not make much sense. Whenever I use or study a certain technology, I realize that I know less and less about it, and I need to go deeper… So how could I say that I know 100% of a technology? Why did I study 100% of your documentation? But would it make sense for me to say that I have 100% skill in a technology, but never put it into practice in any product? Or if I applied to a product, was I successful? These are questions that only numbers played will not answer…",
         "objetivo": "My first opportunity in the job market, I was responsible for a computer lab, having to keep all the equipment working.",
         "resume": "resume",
-        "tracknMe": "I currently work at Track'n me Serviços de Comunicação LTDA. I create usable web interfaces, using the best technologies available on the market. I love what I do.",
+        "smartbpo": "I currently work at SmartBPO, using javascript technologies, such as Node and ReactJS",
+        "tracknMe": "I worked at Track'n me Serviços de Comunicação LTDA. Creating usable web interfaces, using the best technologies available on the market. I love what I do.",
         "univem": "Postgraduate course held between 2016 and 2017, where there is an opportunity to meet different professionals, different technologies and participate in the process of creating a startup.",
         "workHistory": "WORK HISTORY"
     }
