Add spotify project

--- a/src/app/locales/en-US.json
+++ b/src/app/locales/en-US.json
@@ -49,6 +49,7 @@
         "devRadar": "Real-time technology search engine for developers",
         "guilhermeSolutions": "Source code of this portfolio to know my way of coding.",
         "guilhermeVanessa": "My marriage",
+        "spotify": "Project with some existing spotify features, developed using React Native",
         "title": "portfolio",
         "twitter": "Project with some existing twitter features, developed using ReactJS and NodeJS"
     },
