--- a/src/app/locales/pt-BR.json
+++ b/src/app/locales/pt-BR.json
@@ -49,6 +49,7 @@
         "devRadar": "Sistema de procura de desenvolvedores por tecnologia em tempo real",
         "guilhermeSolutions": "Código fonte deste portfólio para conhecer minha forma de codar.",
         "guilhermeVanessa": "Meu casamento",
+        "spotify": "Projeto com algumas funcionalidades do spotify, desenvolvido utilizando React Native",
         "title": "portfólio",
         "twitter": "Projeto com algumas funcionalidades existentes do twitter, desenvolvido utilizando ReactJS e NodeJS"
     },
