Add ecoleta app

--- a/src/app/locales/en-US.json
+++ b/src/app/locales/en-US.json
@@ -46,6 +46,7 @@
         "barber": "Barbershop management project, developed in ReactJS, NodeJS and Expo",
         "beTheHero": "Application to search for causes that can help.",
         "carwash4u": "Project Startup Carwash4U",
+        "ecoleta": "Application to search for appropriate places for waste disposal",
         "devRadar": "Real-time technology search engine for developers",
         "guilhermeSolutions": "Source code of this portfolio to know my way of coding.",
         "guilhermeVanessa": "My marriage",
