--- a/src/app/locales/en-US.json
+++ b/src/app/locales/en-US.json
@@ -22,6 +22,7 @@
         "workProcess": "WORK PROCESS"
     },
     "APR": "APR",
+    "JUN": "JUN",
     "contact": {
         "contact": "contact",
         "contactMe": "REACH ME",
@@ -50,6 +51,7 @@
         "devRadar": "Real-time technology search engine for developers",
         "guilhermeSolutions": "Source code of this portfolio to know my way of coding.",
         "guilhermeVanessa": "My marriage",
+        "pokedex": "Project developed in Angular to simulate a Pokedex",
         "spotify": "Project with some existing spotify features, developed using React Native",
         "title": "portfolio",
         "twitter": "Project with some existing twitter features, developed using ReactJS and NodeJS"
@@ -57,13 +59,15 @@
     "resume": {
         "attention": "ATTENTION",
         "cuca": "I worked at “Cuca” for more than 9 years, working mainly on products involving payroll / personnel department.",
+        "cv": "CV-enUS.pdf",
         "education": "EDUCATION",
         "etec": "That's when it all started, my first steps as a developer.",
         "fatec": "I studied systems analysis and development at FATEC, where I begin to deepen my knowledge in the area that I love so much.",
+        "ibm": "I currently work at IBM (Brazil), acting as a tech lead in IBM's services division, specifically in the area of ​​customer transformation",
         "message": "You recruiter / client who is visiting my site, first I am happy for your visit. I would like to say something about “Code Skills / Design Skills”… Don't give relevance to the values ​​and technologies presented, my experience forces me to say that relating skill percentage to a technology does not make much sense. Whenever I use or study a certain technology, I realize that I know less and less about it, and I need to go deeper… So how could I say that I know 100% of a technology? Why did I study 100% of your documentation? But would it make sense for me to say that I have 100% skill in a technology, but never put it into practice in any product? Or if I applied to a product, was I successful? These are questions that only numbers played will not answer…",
         "objetivo": "My first opportunity in the job market, I was responsible for a computer lab, having to keep all the equipment working.",
         "resume": "resume",
-        "smartbpo": "I currently work at SmartBPO, using javascript technologies, such as Node and ReactJS",
+        "smartbpo": "I worked at SmartBPO, using javascript technologies, such as Node and ReactJS",
         "tracknMe": "I worked at Track'n me Serviços de Comunicação LTDA. Creating usable web interfaces, using the best technologies available on the market. I love what I do.",
         "univem": "Postgraduate course held between 2016 and 2017, where there is an opportunity to meet different professionals, different technologies and participate in the process of creating a startup.",
         "workHistory": "WORK HISTORY"
